--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,25 @@
 server {
     listen 80;
+    index index.html;
+    server_tokens off;
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location /api/ {
+      proxy_set_header Host $http_host;
+      proxy_pass http://backend:8000/api/;
+    }
+
+    location /admin/ {
+      proxy_pass http://backend:8000/admin/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }    
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -13,6 +29,7 @@ server {
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
       }
+
       error_page   500 502 503 504  /50x.html;
       location = /50x.html {
         root   /var/html/frontend/;
