--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.3'
 volumes:
   pg_data:
   static:
+  media:
 
 services:
 
@@ -20,6 +21,7 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - static:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - media:/usr/share/nginx/html/media/
     extra_hosts:
       - "host.docker.internal:127.0.0.1"
   backend:
@@ -29,3 +31,4 @@ services:
     volumes:
       - pg_data:/app/database
       - static:/app/backend_static
+      - media:/app/media
