--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -18,6 +18,10 @@ server {
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /media/ {
+      root /usr/share/nginx/html;
     }    
 
     location / {
