--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -7,6 +7,12 @@ volumes:
 
 services:
 
+  db:
+    image: postgres:13
+    env_file: .env
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+
   frontend:
     build:
       context: ../frontend
@@ -28,7 +34,9 @@ services:
     build:
       context: ../backend
       dockerfile: Dockerfile
+    env_file: .env
     volumes:
-      - pg_data:/app/database
       - static:/app/backend_static
       - media:/app/media
+    depends_on:
+      - db
