--- a/infra/docker-compose.prod.yml
+++ b/infra/docker-compose.prod.yml
@@ -14,28 +14,22 @@ services:
       - pg_data:/var/lib/postgresql/data
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: strkv/foodgram_frontend
     volumes:
       - static:/app/result_build
 
   nginx:
-    image: nginx:1.19.3
+    image: strkv/foodgram_gateway
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - static:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
       - media:/usr/share/nginx/html/media/
     depends_on:
       - backend
 
   backend:
-    build:
-      context: ../backend
-      dockerfile: Dockerfile
+    image: strkv/foodgram_backend
     env_file: .env
     volumes:
       - static:/app/backend_static
